[package]
name = "yzy-prom"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["0x0f0d0 <goodbumsu@gmail.com>"]
description = "A macro crate for defining prometheus metrics"
repository = "https://github.com/newmetric/yzy-prom"

[dependencies]
anyhow = "1.0.100"
async_once = "0.2.6"
lazy_static = "1.5.0"
paste = "1.0.15"
prometheus_exporter = "0.8.5"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }

